# openqasm2-ir

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  tket_opt_qasm.py
docs/: api.rst  conf.py  graphqomb_adapter.rst  index.rst  ir.rst  modules.rst  optimizer.rst  qasm2.rst  requirements.txt  tutorial.rst
examples/qasmbench_demo/: README.md  demo_converter.py  utils.py
gates/: __init__.py  gates.yaml
graphqomb_adapter/: __init__.py  converter.py
ir/: __init__.py  circuit.py
optimizer/: README.md  __init__.py  __main__.py  tket_optimizer.py
qasm2/: __init__.py  ast_nodes.py  cli.py  errors.py  expr_eval.py  lower.py  normalize.py  parser.py  validate.py
qasm2/grammar/: __init__.py  qasm2_strict.lark
tests/: test_expr_eval.py  test_integration.py  test_lower.py  test_normalize.py  test_parser.py  test_validate.py
tests/data/: barrier_test.qasm  bell_pair.golden.json  ghz_3.golden.json  invalid_classical_control.qasm  invalid_midcircuit.qasm  invalid_unsupported_gate.qasm  nested_user_gate.golden.json  nested_user_gate.qasm  parameterized_gates.golden.json  parameterized_gates.qasm  pauli_gates.golden.json  pauli_gates.qasm  single_qubit_no_measurement.golden.json  toffoli_test.golden.json  toffoli_test.qasm  two_qubit_gates.golden.json  two_qubit_gates.qasm  user_defined_gate.golden.json  user_defined_gate.qasm
