[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qasm2graphqomb"
version = "0.1.0"
description = "OpenQASM 2 intermediate representation tools with GraphQOMB integration."
requires-python = ">=3.9"
dependencies = [
    "lark",
    "pyyaml",
    "graphqomb",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "mypy",
    "pyright",
    "ruff",
]

[project.scripts]
qasm-import = "qasm2.cli:main"

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint.pydocstyle]
convention = "numpy"
