[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qasm2graphqomb"
version = "0.1.0"
description = "OpenQASM 2 intermediate representation tools with GraphQOMB integration."
requires-python = ">=3.9"
dependencies = [
    "lark",
    "pyyaml",
    "graphqomb",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "mypy",
    "pyright",
    "ruff",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme",
]

[project.scripts]
qasm-import = "qasm2.cli:main"

[tool.setuptools]
packages = ["qasm2", "qasm2.grammar", "ir", "graphqomb_adapter", "gates"]

[tool.setuptools.package-data]
qasm2 = ["grammar/*.lark"]
gates = ["*.yaml"]

[tool.mypy]
warn_return_any = false
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "graphqomb.*"
ignore_missing_imports = true

[tool.pyright]
reportMissingImports = "none"
reportMissingModuleSource = "none"

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint.pydocstyle]
convention = "numpy"
